--- a/style.css
+++ b/style.css
@@ -5,17 +5,18 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
 .textcolor{color: red;}
 .hlaf{
     width: 40%;
     float: left;
     margin-left: 5%;
-    padding: 2%;
+    padding-left: 2%;
 }
-.hlaf img {
-    width: 80%;
-    margin-left:3% ;
-
+.hlaf img{
+    width: 100%;
 }
 .banner {
     background-image: url("image/top-banner.png");
@@ -33,4 +34,13 @@ section{
     border-radius:5px;
     color:white;
     font-weight:700px;
+   
 }
+.dream{
+    margin-top: 12%;
+    background-image: url("image/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+
